--- a/camera-store/package.json
+++ b/camera-store/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.2",
+    "react-stars": "^2.2.5",
     "reactstrap": "^7.0.2"
   },
   "scripts": {
